--- a/app/public/home.html
+++ b/app/public/home.html
@@ -18,10 +18,11 @@
                 <br>
                 <p>Fill out the survey to see your resutls!</p>
             </div>
-    </div>
+    </div> 
     <div>
         <button type="button" class="btn btn-dark ml-5 btn-lg text-white">
-                <a href="../public/survey.html">Take Our Survey</a></button>
+                <a href="/survey">Take Our Survey>
+                </button>
     </div>
     
  
